test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/api-initiated-pod-eviction/chainsaw-step-01-apply-1-3.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
    evict: "false"
    tier: frontend
  name: nginx
  namespace: test-validate
spec:
  containers:
  - image: public.ecr.aws/docker/library/nginx
    name: nginx
