test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/api-initiated-pod-eviction/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-evict-by-pod-label
spec:
  background: false
  rules:
  - context:
    - apiCall:
        jmesPath: metadata.labels.evict
        urlPath: /api/v1/namespaces/{{request.namespace}}/pods/{{request.name}}
      name: podevictlabel
    match:
      resources:
        kinds:
        - Pod/eviction
    name: deny-evict-by-label
    validate:
      failureAction: Enforce
      deny:
        conditions:
          all:
          - key: '{{ podevictlabel }}'
            operator: Equals
            value: "false"
      message: Evicting Pods protected with the label 'evict=false' is forbidden.
