test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/api-initiated-pod-eviction/02-script.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script
spec:
  timeouts: {}
  try:
  - script:
      content: ./api-initiated-eviction.sh
